chromeos: Add suspend delay tests for PowerManagerClient.

Add initial unit tests for chromeos::PowerManagerClient's
suspend-delay-handling code. More coming soon.

BUG=646912

Review-Url: https://codereview.chromium.org/2345593002
Cr-Commit-Position: refs/heads/master@{#418716}

Former-commit-id: 751cb04fca2fb7861de5ad396d2b08f18471fa9a